--- a/src/plugins/telemetry/public/webcomponents/telemetry-item.html
+++ b/src/plugins/telemetry/public/webcomponents/telemetry-item.html
@@ -9,9 +9,17 @@
   line-height: 40px;
   font-size: 2vw;
 }
+
+label {
+  background-color: black;
+  color: white;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1vw;
+}
 </style>
   <template>
-    <label>{{__(telemetryItem)}}</label>
+    <label  hidden$="{{!showLabel}}">{{__(telemetryItem)}}</label>
   <div on-click="toggle">
   <!--link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import"-->
     <grapp-graph-epoch id="timegraph" hidden="{{!enabled}}" type="time.line" axis="" width="100" height="40">
@@ -29,6 +37,7 @@
       Polymer({
         is:'orov-telemetry-item',
         properties:{
+          showLabel: {type:Boolean, value:false, presisted: true},
           telemetryItem: {type:String, persisted: true},
           telemetryItemValue: {type:String, observer: 'telemetryItemValueChanged'},
           enabled: {type: Boolean, value: true}
