--- a/src/plugins/rovpilot-wire/public/webcomponents/orov-depthHold.html
+++ b/src/plugins/rovpilot-wire/public/webcomponents/orov-depthHold.html
@@ -2,12 +2,14 @@
 <dom-module id="orov-depthHold">
   <style>
       .indicator {
-        height: 40px;
+        height: 100%;
         width: 40px;
         line-height: 20px;
         font-family: Helvetica;
         padding: 10px 10px;
         background-color: transparent;
+        display: table-cell;
+        vertical-align: middle;         
       }
 
       #depthHold {
