--- a/src/plugins/telemetry/public/webcomponents/telemetry-item.html
+++ b/src/plugins/telemetry/public/webcomponents/telemetry-item.html
@@ -28,7 +28,7 @@ label {
         data='[{"time":1370044800,"y":1},{"time":1370044801,"y":10}]'>
       </grapp-graph-epoch-series>
     </grapp-graph-epoch>
-  <span id="instantvalue" hidden="{{asGraph}}" class="std">{{telemetryItemValue}}</span>
+  <span id="instantvalue" hidden="{{asGraph}}" class="std">{{formated(telemetryItemValue)}}</span>
 </div>
   </template>
 
@@ -76,6 +76,9 @@ label {
           if (this.toggleEnabled){
             this.asGraph = !this.asGraph;
           }
+        },
+        formated: function(value){
+          return Number(value).toFixed(2);
         }
       })
     })();
