Change telemetry-item wc to number by default

--- a/src/plugins/telemetry/public/webcomponents/telemetry-item.html
+++ b/src/plugins/telemetry/public/webcomponents/telemetry-item.html
@@ -41,7 +41,7 @@ label {
           showLabel: {type:Boolean, value:false, presisted: true},
           telemetryItem: {type:String, persisted: true},
           telemetryItemValue: {type:String, observer: 'telemetryItemValueChanged'},
-          asGraph: {type: Boolean, value: true, persisted: true},
+          asGraph: {type: Boolean, value: false, persisted: true},
           toggleEnabled: {type:Boolean, value: true}
         },
         behaviors: [namespace('behaviors').oROVStandard],
