fixes OpenROV/openrov-software/#485; work around for Polymer variable map issue

--- a/src/plugins/classic-ui/public/webcomponents/classic-ui.html
+++ b/src/plugins/classic-ui/public/webcomponents/classic-ui.html
@@ -382,7 +382,7 @@ img.center {
 
 <drop-in-dialog id="plugin-settings" header="Settings">
   <div>
-  <orov-settings-manager event-emitter="{{cockpit-event-emitter}}"></orov-settings-manager>
+  <orov-settings-manager event-emitter="{{cockpitEventEmitter}}"></orov-settings-manager>
 </div>
 </drop-in-dialog>
 
