--- a/src/static/webcomponents/orov-behavior.html
+++ b/src/static/webcomponents/orov-behavior.html
@@ -24,6 +24,7 @@
       //Added a new lifecycle event for the control:
       if ((this.eventEmitter !== undefined) && (this.registerEmitterHanlders !== undefined)){
         this.registerEmitterHanlders(this.eventEmitter);
+        console.log("OROV-BEHAVIOR: Registerd eventEmitter");
       }
     },
 
