--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -25,8 +25,7 @@
         framespersecond='{{framesPerSecond}}'
         canvas='{{canvas}}'
         cors='false'
-        showMenu='true'
-        tag={{tagHandler()}}>
+        showMenu='true'>
       <content></content>
     </packet-video>
     </template>
