Unit tests and refactors of orov-emitter-behavior
All developers that use the orov-behaviors should now link to the web
component in their webcomponet html file.

--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-blackbox">
   <style>
   </style>
