--- a/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
+++ b/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-servo-tilt">
   <style>
     img {
