--- a/src/plugins/controllerboard2x/public/webcomponents/orov-battery-status.html
+++ b/src/plugins/controllerboard2x/public/webcomponents/orov-battery-status.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-battery-status" >
 <style>
 .battery0 {
@@ -75,7 +76,7 @@
             if (definition!==undefined){
               self.minVoltage = definition.minVoltage;
               self.maxVoltage = definition.maxVoltage;
-            }        
+            }
           });
         }
 
