--- a/src/plugins/rovpilot-wire/public/webcomponents/orov-headingHold.html
+++ b/src/plugins/rovpilot-wire/public/webcomponents/orov-headingHold.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module id="orov-headingHold">
   <style>
       .indicator {
@@ -9,7 +10,7 @@
         padding: 10px 10px;
         background-color: transparent;
         display: table-cell;
-        vertical-align: middle;        
+        vertical-align: middle;
       }
 
       #headingHold {
