--- a/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
+++ b/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-slider/paper-slider.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-thrusters2x1-motortest">
 <style>
    paper-slider {
