--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-ajax/iron-ajax.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-software-version">
   <style>
   </style>
