--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox-status.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox-status.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 
 <dom-module name="orov-blackbox-status">
   <!--link rel="import" type="css" href="components-font-awesome/css/font-awesome.min.css"-->
