--- a/src/plugins/controllerboard2x/public/webcomponents/orov-telemetry-item.html
+++ b/src/plugins/controllerboard2x/public/webcomponents/orov-telemetry-item.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-servo-tilt">
   <style>
     img {
