--- a/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
+++ b/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module name="orov-events-graph">
 <link rel="import" type="css" href="../epoch/epoch.min.css">
 
