--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-battery/orov-mobile-battery.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-battery/orov-mobile-battery.html
@@ -1,14 +1,14 @@
 <link rel="import" href="../../polymer/polymer.html">
-
+<link rel="import" href="../../orov-behaviors/orov-behavior.html">
 <link rel="import" href="../../iron-icons/iron-icons.html">
 <link rel="import" href="../../iron-icon/iron-icon.html">
 
 <dom-module id="orov-mobile-battery">
-	
+
 	<style>
-		
+
 	</style>
-	
+
 	<template strip-whitespace>
 	  <iron-icon icon="device:battery-charging-full"></iron-icon>
 		<span>[[battery]]V</span>
@@ -18,31 +18,31 @@
 		Polymer(
 		{
 			is: 'orov-mobile-battery',
-			
+
 			listeners:
 			{
 			},
-			
-			properties: 
+
+			properties:
 			{
         battery: {
           type: Number,
           value: '9.0'
         },
 			},
-			
+
 			behaviors: [namespace('behaviors').oROVStandard],
-			
-      registerEmitterHanlders: function(emitter) 
+
+      registerEmitterHanlders: function(emitter)
       {
         var self = this;
-        
-        emitter.on('plugin.controllerboard2x.systemPower.update', function(data) 
+
+        emitter.on('plugin.controllerboard2x.systemPower.update', function(data)
         {
           self.battery = parseFloat(data.board.voltage).toFixed(1);
         });
       }
-      
+
 		} );
 	</script>
 </dom-module>
