--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-depth/orov-mobile-depth.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-depth/orov-mobile-depth.html
@@ -1,14 +1,15 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../orov-behaviors/orov-behavior.html">
 
 <link rel="import" href="../../iron-icons/iron-icons.html">
 <link rel="import" href="../../iron-icon/iron-icon.html">
 
 <dom-module id="orov-mobile-depth">
-	
+
 	<style>
-		
+
 	</style>
-	
+
 	<template strip-whitespace>
 	  <span>[[depth]]m</span>
 		<iron-icon icon="swap-vert"></iron-icon>
@@ -18,31 +19,31 @@
 		Polymer(
 		{
 			is: 'orov-mobile-depth',
-			
+
 			listeners:
 			{
 			},
-			
-			properties: 
+
+			properties:
 			{
         depth: {
           type: Number,
           value: '0.00'
         },
 			},
-			
+
 			behaviors: [namespace('behaviors').oROVStandard],
-			
-      registerEmitterHanlders: function(emitter) 
+
+      registerEmitterHanlders: function(emitter)
       {
         var self = this;
-        
-        emitter.on('plugin.navigationData.data', function(data) 
+
+        emitter.on('plugin.navigationData.data', function(data)
         {
           self.depth = parseFloat(data.depth).toFixed(2);
         });
       }
-      
+
 		} );
 	</script>
 </dom-module>
