--- a/src/plugins/navigation-data/public/webcomponents/topdowncompass.html
+++ b/src/plugins/navigation-data/public/webcomponents/topdowncompass.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 
 <dom-module id="orov-topdowncompass">
   <style type="text/css">
