--- a/src/plugins/new-ui/public/webcomponents/power.html
+++ b/src/plugins/new-ui/public/webcomponents/power.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 <dom-module id="orov-newui-power">
   <style type="text/css">
 
@@ -187,7 +188,7 @@
               self.maxVoltage = definition.maxVoltage;
             }
           });
-          
+
         },
         setLeftBattery: function (current) {
           this.setCurrent($(this.$.left), this.leftIndicator, current);
