--- a/src/plugins/new-ui/public/webcomponents/time.html
+++ b/src/plugins/new-ui/public/webcomponents/time.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 
 <dom-module id="orov-newui-time">
   <style type="text/css">
