--- a/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
@@ -14,6 +14,8 @@
             emit: function () {
             },
             off: function () {
+            },
+            withHistory: function(event,func) {
             }
           };
         },
@@ -52,8 +54,14 @@
         if (oldvalue !== undefined) {
           oldvalue.off(e.message, e.fn);
         }
-        newvalue.on(e.message, e.fn);
+        if(newvalue.withHistory && e.withHistory){
+          newvalue.withHistory.on(e.message, e.fn);
+        } else {
+          newvalue.on(e.message, e.fn);
+        }
       }
+
+
       //Inject a registration of each message listener so that
       //we can handle auto-reregistering on event emitter changes
       var on = newvalue.on;
@@ -67,6 +75,21 @@
           fn
         ]);
       };
+
+      if (newvalue.withHistory){
+        var withHistory_on = newvalue.withHistory.on;
+        newvalue.withHistory.on = function(message,fn){
+          self._emitterRegistrations.push({
+            message: message,
+            fn: fn,
+            withHistory: true
+          });
+          withHistory_on.apply(newvalue, [
+            message,
+            fn
+          ]);
+        }
+      }
       //And in the case that control removes a linstener we want to pull
       //if from our registery so that future emitter changes don't auto
       //restore the removed listener.
